Fixed an issue where the icons and text may not be visible in certain modes behind certain colours, and arranged imports

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@ nav {
   display: flex;
   flex-direction: column;
   gap: 4px;
-  backdrop-filter: blur(100px);
+  /* backdrop-filter: blur(100px); */
   z-index: 4;
   transition: all 0.5s;
   overflow: hidden;
